# mac_shortcuts_mcp

./: AGENTS.md  README.md  pyproject.toml
openspec/: project.md
openspec/changes/archive/2025-10-15-add-graceful-shutdown/: proposal.md  tasks.md
openspec/changes/archive/2025-10-15-add-graceful-shutdown/specs/server-lifecycle/: spec.md
openspec/changes/update-readme-structure/: proposal.md  tasks.md
openspec/changes/update-readme-structure/specs/project-docs/: spec.md
openspec/specs/server-lifecycle/: spec.md
src/mac_shortcuts_mcp/: __init__.py  __main__.py  cli.py  server.py  shortcuts.py
