[project]
name = "mac-shortcuts-mcp"
version = "0.1.0"
description = "An MCP server for executing macOS Shortcuts from ChatGPT-compatible clients."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.11.0",
    "fastmcp>=2.12.0",
    "mcp>=1.16.0",
    "typer>=0.19.2",
]

[project.scripts]
mac-shortcuts-mcp = "mac_shortcuts_mcp.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mac_shortcuts_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/mac_shortcuts_mcp", "README.md", "AGENTS.md", "pyproject.toml"]
